k8s/celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  labels:
    app: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
      - name: celery-worker
        image: mlops-api:latest
        imagePullPolicy: IfNotPresent
        command: ["celery", "-A", "src.celery_app", "worker", "--loglevel=info"]
