k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlops-api
  labels:
    app: mlops-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlops-api
  template:
    metadata:
      labels:
        app: mlops-api
    spec:
      containers:
      - name: mlops-api
        image: mlops-api:latest
        imagePullPolicy: Changeset
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: mlops-api-service
spec:
  selector:
    app: mlops-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
