k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlops-service
spec:
  selector:
    app: mlops-pipeline
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
